src/test/ui/issues/issue-17933.stderr
error[E0658]: referencing statics in patterns is experimental
  --> $DIR/issue-17933.rs:5:9
   |
LL |         self::X => { },
   |         ^^^^^^^
   |
   = help: add `#![feature(static_in_pattern)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
